frontend/test/should_fail/index_count_edge_fromto_argument_mismatch.grg
#using "index_count_edge_model.gm"

rule i {
	if{ countEdgesFromIndexFromTo(fooi, 42, enu::bar) > 0; }
	
	modify {
	}
}
